--- a/package.json
+++ b/package.json
@@ -18,19 +18,20 @@
   "dependencies": {
     "0xsequence": "^2.3.12",
     "@0xsequence/api": "^2.3.12",
-    "@0xsequence/checkout": "^5.2.3",
-    "@0xsequence/connect": "^5.2.3",
+    "@0xsequence/checkout": "^5.3.16",
+    "@0xsequence/connect": "^5.3.16",
     "@0xsequence/design-system": "^2.1.12",
-    "@0xsequence/hooks": "^5.2.3",
+    "@0xsequence/hooks": "^5.3.16",
     "@0xsequence/indexer": "^2.3.12",
     "@0xsequence/marketplace-sdk": "^0.8.9",
     "@0xsequence/metadata": "^2.3.12",
     "@0xsequence/network": "^2.3.12",
-    "@0xsequence/wallet-widget": "^5.2.3",
+    "@0xsequence/wallet-widget": "^5.3.16",
     "@databeat/tracker": "^0.9.3",
     "@google/model-viewer": "^4.1.0",
     "@radix-ui/react-accordion": "^1.2.10",
     "@radix-ui/react-slot": "^1.2.2",
+    "@react-oauth/google": "^0.12.2",
     "@tailwindcss/postcss": "^4.1.5",
     "@tanstack/react-query": "^5.75.5",
     "@tanstack/react-query-devtools": "^5.75.5",
@@ -43,9 +44,12 @@
     "nuqs": "^2.4.3",
     "radash": "^12.1.0",
     "react": "^19.1.0",
+    "react-apple-signin-auth": "^1.1.2",
     "react-dom": "^19.1.0",
     "react-error-boundary": "^6.0.0",
+    "react-markdown": "8.0.7",
     "react-virtuoso": "^4.12.7",
+    "remark-breaks": "^4.0.0",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.5",
     "three": "^0.176.0",
