--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "motion": "^12.10.0",
     "next": "^15.3.2",
     "nuqs": "^2.4.3",
+    "pino-pretty": "^13.1.2",
     "radash": "^12.1.0",
     "react": "^19.1.0",
     "react-apple-signin-auth": "^1.1.2",
