--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-apple-signin-auth": "^1.1.2",
     "react-dom": "^19.1.0",
     "react-error-boundary": "^6.0.0",
+    "react-faq-component": "^1.3.4",
     "react-markdown": "10.1.0",
     "react-virtuoso": "^4.12.7",
     "remark-breaks": "^4.0.0",
