--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-error-boundary": "^6.0.0",
     "react-faq-component": "^1.3.4",
     "react-markdown": "10.1.0",
+    "react-player": "^3.3.3",
     "react-virtuoso": "^4.12.7",
     "remark-breaks": "^4.0.0",
     "tailwind-merge": "^3.2.0",
