Add next-video support and improve video handling
- Updated next.config.js to use next-video
- Improved video component for Arweave URLs
- Added gitignore for video files
- Enhanced video autoplay functionality

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,11 @@ yarn-error.log*
 boilerplate_setup.log
 
 .env
+# next-video
+videos/*
+!videos/*.json
+!videos/*.js
+!videos/*.ts
+public/_next-video
+public/videos
+
