--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,5 @@ NEXT_PUBLIC_ACCESS_KEY=""
 NEXT_PUBLIC_PROJECT_ID=""
 # Optional WalletConnect project id, for integration with WalletConnect
 NEXT_PUBLIC_WALLET_CONNECT_ID=""
+# Alchemy API key for NFT metadata and floor price data (server-side only)
+ALCHEMY_API_KEY=""
